# strategyforge

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
src/agents/: __init__.py
src/scenarios/: __init__.py  taiwan_strait.py
strategyforge/: __init__.py  __main__.py  cli_map.py
strategyforge/agents/: graph.py  prompts.py  state.py
strategyforge/api/: __init__.py  main.py
strategyforge/evaluation/: __init__.py  benchmarks.py  metrics.py  runner.py
strategyforge/geo/: __init__.py  distance.py  terrain.py  visualization.py
strategyforge/scenarios/: base.py
strategyforge/tools/: __init__.py  geospatial.py
tests/: __init__.py  test_geospatial.py
web/: next.config.js  package.json  tailwind.config.ts  vercel.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/evaluation/: page.tsx
web/app/map/: page.tsx
web/app/simulation/: page.tsx
web/components/: Map.tsx  SimulationMap.tsx
