[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strategyforge"
version = "1.0.0"
description = "Multi-Agent Wargaming Evaluation System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langchain-core>=0.1.0",
    "langchain-ollama>=0.2.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.0.40",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["strategyforge*"]
